Switching search engine

--- a/Templates/report.html
+++ b/Templates/report.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-<title>Similarity Report</title>
-<style></style>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Similarity Report</title>
+</head>
+
 <body>
-
-<h2>Similarity Report</h2>
-
-
+    <h2>Similarity Report</h2>
 </body>
+
 </html>
